correct z-index

--- a/src/assets/Clouds.css
+++ b/src/assets/Clouds.css
@@ -7,7 +7,7 @@
   border-bottom-right-radius: 4em;
   border-bottom-left-radius: 4em;
   position: relative;
-  z-index: 1;
+  z-index: 2;
 }
   .cloud:after {
     content: '';
